Add Minecraft 1.20.4 compatibility